# MyGannGoPY2

./: .gitignore  logginin.py  pyproject.toml
dones/: api_stuff.py  runner.py
myganngopy/utils/: __init__.py  callbacks.py  cookies.py  login.py  nav.py
tests/: cookies.py  nav.py  runner.py
